# emier-blockchain

./: .dockerignore  .neural-consensus-ready  CELEBRATION_30_WORKFLOWS.md  Cargo.toml  Cargo.toml.backup2  Dockerfile  ENABLE_PAGES_INSTRUCTIONS.md  FINAL_SUMMARY.txt  PROJECT_SUCCESS.md  README.md  SECURITY-BOUNTY.md  TRIGGER_CI.md  check-gh-pages-simple.sh  check-status.sh  deploy-via-clone.sh  final-deploy.sh  final-verify.sh  index.html  monitor-pages.sh  push-emier.sh  verify-update.sh
.github/workflows/: ci-complete.yml  ci-multiple-binaries.yml  ci-neural.yml  ci-super-simple.yml  ci-with-build.yml  ci.yml  docker.yml  docs.yml  main.yml  release.yml  ultra-simple.yml
config/: mainnet.yaml
docs/: book.toml  index.html  technical-communication-plan.md
docs/src/: SUMMARY.md  introduction.md
public/: index.html
scripts/: analyze-failed-workflows.sh  analyze-remaining-red.sh  auto-release.sh  build.sh  check-all-workflows.sh  cloud-benchmark.sh  debug-failed-workflows.sh  deep-diagnosis.sh  deploy-testnet.sh  full-local-test.sh  future-phases.sh  incremental-plan.sh  live-demo.sh  monitor-ci-final.sh  monitor-ci-result.sh  monitor-ci.sh  monitor-phase1.sh  monitor-reset.sh  monitor-simple-approach.sh  monitor-workflow-fixes.sh  pantau-workflow.sh  prepare-release.sh  quick-fixes.sh  run-benchmarks.sh  test-ci-locally.sh  watch-workflows.sh
src/: lib.rs  main.rs
src/consensus/: hybrid_ai.rs  metrics.rs  mod.rs  modular_consensus.rs  pbft_engine.rs  poh_parallel.rs
src/core/: config.rs  emier.rs  mod.rs
src/cross_chain/: bitcoin_adapter.rs  bridge_adapter.rs  message_verification.rs  solana_adapter.rs  universal_layer.rs
src/economics/: mod.rs
src/execution/: atomic_batch.rs  gas_calculator.rs  parallel_executor.rs  smart_contract.rs
src/network/: message_handler.rs  sync_manager.rs
(+53 files in other folders)
