[package]
name = "emier-blockchain"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
description = "Next-generation blockchain with modular consensus and global sharding"
authors = ["SeekOneID <seekoneid@example.com>"]
license = "Apache-2.0"
repository = "https://github.com/seekoneid-emier/emier-blockchain"

[dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bytes = "1.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "emier-node"
path = "src/bin/node/main.rs"

[[bin]]
name = "emier-cli"
path = "src/bin/cli/main.rs"

[[bin]]
name = "emier-dev"
path = "src/bin/dev/main.rs"

[[bin]]
name = "emier-benchmark"
path = "src/bin/benchmark/main.rs"
