[package]
name = "emier-blockchain"
version = "1.0.0"
edition = "2021"
description = "Next-generation blockchain with modular consensus and global sharding"

[dependencies]
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "emier-node"
path = "src/bin/node/main.rs"

[[bin]]
name = "emier-cli"
path = "src/bin/cli/main.rs"

[[bin]]
name = "emier-dev"
path = "src/bin/dev/main.rs"

[[bin]]
name = "emier-benchmark"
path = "src/bin/benchmark/main.rs"
